--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev-server-client": "webpack --progress --watch --config webpack/development.js | webpack-dev-server --port 8083 --config webpack/development.js --hot --history-api-fallback --progress --colors --inline --content-base ./public/build",
     "dev-server": "node serverBuild/server.js",
     "build": "webpack --config webpack/production.js --progress --profile --colors",
-    "start": "node serverBuild/server.js"
+    "start": "node serverBuild/server.js",
+    "test": "NODE_ENV=test mocha tests/**/*.js --compilers js:babel-core/register"
   },
   "author": "Jeremy Jacobskind",
   "license": "ISC",
@@ -39,9 +40,13 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "chai-sorted": "^0.1.0",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
+    "mocha": "^3.5.3",
     "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.0.6",
